# micrograd_rs

./: Cargo.toml  README.md
src/: main.rs  nn.rs  value.rs
