[package]
name = "micrograd_rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Andrej Karpathy's micrograd scalar-valued engine."
authors = ["Nachiket Tanksale <nachiket.tanksale@gmail.com>"]
license = "MIT"
repository = "https://github.com/nachiket273/micrograd_rs"

[[bin]]
name = "Main"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
uuid = {version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}